// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlacementOrdering render shows toggle 1`] = `
<div>
  <div>
    <div
      class="css-v635ux"
    >
      <div
        class="css-14680sq"
        style="display: flex; flex-direction: column; align-items: center; box-sizing: border-box;"
      >
        <div
          class="css-4cxybv"
        >
          <div
            class="css-17xxml8"
            id="preview-prompt"
          />
        </div>
        <div
          class="toggle css-qfjlp9"
        >
          <div
            class="css-o4h4zm"
          >
            <div
              class="css-hast6p"
            >
              <div
                class="css-mz8upz"
              >
                <div
                  class="css-1hn7m79"
                >
                  <div
                    class="css-11elljy"
                  >
                    <svg
                      preserveAspectRatio="xMinYMin meet"
                      style="enable-background: new -129.5 127 34 35;"
                      version="1.1"
                      viewBox="-129.5 127 34 35"
                    >
                      <path
                        d="M-112.9,160.4c-8.5,0-15.5-6.9-15.5-15.5c0-8.5,6.9-15.5,15.5-15.5s15.5,6.9,15.5,15.5 C-97.4,153.5-104.3,160.4-112.9,160.4z"
                        style="fill: #D0CAC5; stroke: #E6E3E0; stroke-width: 0.75; stroke-miterlimit: 10;"
                      />
                      <path
                        d="M-113.2,159c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-105.2,159-113.2,159z"
                        style="fill: #B3ABA4; stroke: #CDC7C2; stroke-width: 0.5; stroke-miterlimit: 10;"
                      />
                      <circle
                        cx="-114.2"
                        cy="143.5"
                        fill="white"
                        r="14"
                      />
                      <path
                        d="M-114.2,158c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-106.2,158-114.2,158z M-114.2,130c-7.4,0-13.5,6.1-13.5,13.5s6.1,13.5,13.5,13.5s13.5-6.1,13.5-13.5S-106.8,130-114.2,130z"
                        fill="#bce2ff"
                      />
                      <polygon
                        fill="#1a9cff"
                        points="-114.8,150.7 -121.6,144.8 -119,141.8 -115.9,144.5 -111.3,136.3 -107.8,138.2"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1hn7m79"
                >
                  <div
                    class="css-11elljy"
                  >
                    <svg
                      preserveAspectRatio="xMinYMin meet"
                      style="enable-background: new -129.5 127 34 35;"
                      version="1.1"
                      viewBox="-129.5 127 34 35"
                    >
                      <path
                        d="M-112.9,160.4c-8.5,0-15.5-6.9-15.5-15.5c0-8.5,6.9-15.5,15.5-15.5s15.5,6.9,15.5,15.5 C-97.4,153.5-104.3,160.4-112.9,160.4z"
                        style="fill: #D0CAC5; stroke: #E6E3E0; stroke-width: 0.75; stroke-miterlimit: 10;"
                      />
                      <path
                        d="M-113.2,159c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-105.2,159-113.2,159z"
                        style="fill: #B3ABA4; stroke: #CDC7C2; stroke-width: 0.5; stroke-miterlimit: 10;"
                      />
                      <circle
                        cx="-114.2"
                        cy="143.5"
                        fill="white"
                        r="14"
                      />
                      <path
                        d="M-114.2,158c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-106.2,158-114.2,158z M-114.2,130c-7.4,0-13.5,6.1-13.5,13.5s6.1,13.5,13.5,13.5s13.5-6.1,13.5-13.5S-106.8,130-114.2,130z"
                        fill="#bce2ff"
                      />
                      <polygon
                        fill="#1a9cff"
                        points="-114.8,150.7 -121.6,144.8 -119,141.8 -115.9,144.5 -111.3,136.3 -107.8,138.2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                aria-hidden="false"
                class="css-88il8q"
                data-pie-readable="false"
              >
                Show correct answer
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-tfu0i"
          style="grid-template-columns: repeat(0, 1fr); grid-template-rows: auto 1fr auto 1fr;"
        >
          <div
            class="css-1iatin6"
            style="grid-column: 1/1;"
          />
          <div
            class="css-1670972"
            style="grid-column: 1/1;"
          />
        </div>
        <div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlacementOrdering render snapshot 1`] = `
<div>
  <div>
    <div
      class="css-v635ux"
    >
      <div
        class="css-14680sq"
        style="display: flex; flex-direction: column; align-items: center; box-sizing: border-box;"
      >
        <div
          class="css-4cxybv"
        >
          <div
            class="css-17xxml8"
            id="preview-prompt"
          />
        </div>
        <div
          class="toggle css-qfjlp9"
        >
          <div
            class="css-o4h4zm"
          >
            <div
              class="css-hast6p"
            >
              <div
                class="css-mz8upz"
              >
                <div
                  class="css-1hn7m79"
                >
                  <div
                    class="css-11elljy"
                  >
                    <svg
                      preserveAspectRatio="xMinYMin meet"
                      style="enable-background: new -129.5 127 34 35;"
                      version="1.1"
                      viewBox="-129.5 127 34 35"
                    >
                      <path
                        d="M-112.9,160.4c-8.5,0-15.5-6.9-15.5-15.5c0-8.5,6.9-15.5,15.5-15.5s15.5,6.9,15.5,15.5 C-97.4,153.5-104.3,160.4-112.9,160.4z"
                        style="fill: #D0CAC5; stroke: #E6E3E0; stroke-width: 0.75; stroke-miterlimit: 10;"
                      />
                      <path
                        d="M-113.2,159c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-105.2,159-113.2,159z"
                        style="fill: #B3ABA4; stroke: #CDC7C2; stroke-width: 0.5; stroke-miterlimit: 10;"
                      />
                      <circle
                        cx="-114.2"
                        cy="143.5"
                        fill="white"
                        r="14"
                      />
                      <path
                        d="M-114.2,158c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-106.2,158-114.2,158z M-114.2,130c-7.4,0-13.5,6.1-13.5,13.5s6.1,13.5,13.5,13.5s13.5-6.1,13.5-13.5S-106.8,130-114.2,130z"
                        fill="#bce2ff"
                      />
                      <polygon
                        fill="#1a9cff"
                        points="-114.8,150.7 -121.6,144.8 -119,141.8 -115.9,144.5 -111.3,136.3 -107.8,138.2"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1hn7m79"
                >
                  <div
                    class="css-11elljy"
                  >
                    <svg
                      preserveAspectRatio="xMinYMin meet"
                      style="enable-background: new -129.5 127 34 35;"
                      version="1.1"
                      viewBox="-129.5 127 34 35"
                    >
                      <path
                        d="M-112.9,160.4c-8.5,0-15.5-6.9-15.5-15.5c0-8.5,6.9-15.5,15.5-15.5s15.5,6.9,15.5,15.5 C-97.4,153.5-104.3,160.4-112.9,160.4z"
                        style="fill: #D0CAC5; stroke: #E6E3E0; stroke-width: 0.75; stroke-miterlimit: 10;"
                      />
                      <path
                        d="M-113.2,159c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-105.2,159-113.2,159z"
                        style="fill: #B3ABA4; stroke: #CDC7C2; stroke-width: 0.5; stroke-miterlimit: 10;"
                      />
                      <circle
                        cx="-114.2"
                        cy="143.5"
                        fill="white"
                        r="14"
                      />
                      <path
                        d="M-114.2,158c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-106.2,158-114.2,158z M-114.2,130c-7.4,0-13.5,6.1-13.5,13.5s6.1,13.5,13.5,13.5s13.5-6.1,13.5-13.5S-106.8,130-114.2,130z"
                        fill="#bce2ff"
                      />
                      <polygon
                        fill="#1a9cff"
                        points="-114.8,150.7 -121.6,144.8 -119,141.8 -115.9,144.5 -111.3,136.3 -107.8,138.2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="css-88il8q"
                data-pie-readable="false"
              >
                Show correct answer
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-tfu0i"
          style="grid-template-columns: repeat(0, 1fr); grid-template-rows: auto 1fr auto 1fr;"
        >
          <div
            class="css-1iatin6"
            style="grid-column: 1/1;"
          />
          <div
            class="css-1670972"
            style="grid-column: 1/1;"
          />
        </div>
        <div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlacementOrdering render snapshot with rationale 1`] = `
<div>
  <div>
    <div
      class="css-v635ux"
    >
      <div
        class="css-14680sq"
        style="display: flex; flex-direction: column; align-items: center; box-sizing: border-box;"
      >
        <div
          class="css-4cxybv"
        >
          <div
            class="css-17xxml8"
            id="preview-prompt"
          />
        </div>
        <div
          class="toggle css-qfjlp9"
        >
          <div
            class="css-o4h4zm"
          >
            <div
              class="css-hast6p"
            >
              <div
                class="css-mz8upz"
              >
                <div
                  class="css-1hn7m79"
                >
                  <div
                    class="css-11elljy"
                  >
                    <svg
                      preserveAspectRatio="xMinYMin meet"
                      style="enable-background: new -129.5 127 34 35;"
                      version="1.1"
                      viewBox="-129.5 127 34 35"
                    >
                      <path
                        d="M-112.9,160.4c-8.5,0-15.5-6.9-15.5-15.5c0-8.5,6.9-15.5,15.5-15.5s15.5,6.9,15.5,15.5 C-97.4,153.5-104.3,160.4-112.9,160.4z"
                        style="fill: #D0CAC5; stroke: #E6E3E0; stroke-width: 0.75; stroke-miterlimit: 10;"
                      />
                      <path
                        d="M-113.2,159c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-105.2,159-113.2,159z"
                        style="fill: #B3ABA4; stroke: #CDC7C2; stroke-width: 0.5; stroke-miterlimit: 10;"
                      />
                      <circle
                        cx="-114.2"
                        cy="143.5"
                        fill="white"
                        r="14"
                      />
                      <path
                        d="M-114.2,158c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-106.2,158-114.2,158z M-114.2,130c-7.4,0-13.5,6.1-13.5,13.5s6.1,13.5,13.5,13.5s13.5-6.1,13.5-13.5S-106.8,130-114.2,130z"
                        fill="#bce2ff"
                      />
                      <polygon
                        fill="#1a9cff"
                        points="-114.8,150.7 -121.6,144.8 -119,141.8 -115.9,144.5 -111.3,136.3 -107.8,138.2"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1hn7m79"
                >
                  <div
                    class="css-11elljy"
                  >
                    <svg
                      preserveAspectRatio="xMinYMin meet"
                      style="enable-background: new -129.5 127 34 35;"
                      version="1.1"
                      viewBox="-129.5 127 34 35"
                    >
                      <path
                        d="M-112.9,160.4c-8.5,0-15.5-6.9-15.5-15.5c0-8.5,6.9-15.5,15.5-15.5s15.5,6.9,15.5,15.5 C-97.4,153.5-104.3,160.4-112.9,160.4z"
                        style="fill: #D0CAC5; stroke: #E6E3E0; stroke-width: 0.75; stroke-miterlimit: 10;"
                      />
                      <path
                        d="M-113.2,159c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-105.2,159-113.2,159z"
                        style="fill: #B3ABA4; stroke: #CDC7C2; stroke-width: 0.5; stroke-miterlimit: 10;"
                      />
                      <circle
                        cx="-114.2"
                        cy="143.5"
                        fill="white"
                        r="14"
                      />
                      <path
                        d="M-114.2,158c-8,0-14.5-6.5-14.5-14.5s6.5-14.5,14.5-14.5s14.5,6.5,14.5,14.5S-106.2,158-114.2,158z M-114.2,130c-7.4,0-13.5,6.1-13.5,13.5s6.1,13.5,13.5,13.5s13.5-6.1,13.5-13.5S-106.8,130-114.2,130z"
                        fill="#bce2ff"
                      />
                      <polygon
                        fill="#1a9cff"
                        points="-114.8,150.7 -121.6,144.8 -119,141.8 -115.9,144.5 -111.3,136.3 -107.8,138.2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="css-88il8q"
                data-pie-readable="false"
              >
                Show correct answer
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-tfu0i"
          style="grid-template-columns: repeat(0, 1fr); grid-template-rows: auto 1fr auto 1fr;"
        >
          <div
            class="css-1iatin6"
            style="grid-column: 1/1;"
          />
          <div
            class="css-1670972"
            style="grid-column: 1/1;"
          />
        </div>
        <div
          class="collapsible css-46cmql"
        >
          <div>
            <span
              class="css-1thq00z"
            >
              Show Rationale
            </span>
          </div>
        </div>
        <div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;
